--- a/_posts/2023-03-19-59037.md
+++ b/_posts/2023-03-19-59037.md
@@ -1,5 +1,5 @@
 ---
-title: 어린 동물 찾기
+title: SELECT > 어린 동물 찾기
 date: 2023-03-19 14:46:00 +0900
 categories: [Database]
 tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,select,레벨1]     # TAG names should always be lowercase
@@ -8,7 +8,11 @@ tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,select,레벨1]    
 
 안녕하세요~👋
 
-오늘도 공부하는 무럭무럭 ✨`성장몬`✨ 입니다. <br>
+오늘도 공부하는 무럭무럭 ✨`성장몬`✨ 입니다.
+
+ <br>
+
+
 
 같이 성장하고 싶다면~?
 
