tag Update 2023-03-19-131697.md

--- a/_posts/2023-03-19-131697.md
+++ b/_posts/2023-03-19-131697.md
@@ -2,7 +2,7 @@
 title: SUM, MAX, MIN > 가장 비싼 상품 구하기
 date: 2023-03-19 17:36:00 +0900
 categories: [Database]
-tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,select,레벨1,between~and]     # TAG names should always be lowercase
+tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,max,레벨1]     # TAG names should always be lowercase
 ---
 
 
