title Update 2023-03-20-12937.md

--- a/_posts/java/2023-03-20-12937.md
+++ b/_posts/java/2023-03-20-12937.md
@@ -1,5 +1,5 @@
 ---
-title: 연습문제 > 짝수와 홀수
+title: [Java] 연습문제 > 짝수와 홀수
 date: 2023-03-20 21:07:00 +0900
 categories: [Java]
 tags: [프로그래머스,코딩테스트연습,java,레벨1]     # TAG names should always be lowercase
