--- a/_posts/database/2023-03-21-59406.md
+++ b/_posts/database/2023-03-21-59406.md
@@ -2,7 +2,7 @@
 title: SUM, MAX, MIN > 동물 수 구하기
 date: 2023-03-21 22:43:00 +0900
 categories: [Database]
-tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,min,레벨2]     # TAG names should always be lowercase
+tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,count,레벨2]     # TAG names should always be lowercase
 ---
 
 
