--- a/_posts/database/2023-03-21-59408.md
+++ b/_posts/database/2023-03-21-59408.md
@@ -2,7 +2,7 @@
 title: SUM, MAX, MIN > 중복 제거하기
 date: 2023-03-21 22:41:00 +0900
 categories: [Database]
-tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,min,레벨2]     # TAG names should always be lowercase
+tags: [프로그래머스,코딩테스트연습,MySQL,Oracle,count,distinct,레벨2]     # TAG names should always be lowercase
 ---
 
 
