링크 Update 2023-03-21-59047.md

--- a/_posts/database/2023-03-21-59047.md
+++ b/_posts/database/2023-03-21-59047.md
@@ -28,7 +28,7 @@ REGXEP_LIKE 를 쓰면 될 거 같아요!
 
 + [프로그래머스 https://programmers.co.kr/](https://programmers.co.kr/)
 
-+ [코딩테스트 연습](https://school.programmers.co.kr/learn/challenges) > [String, Date](https://school.programmers.co.kr/learn/courses/30/parts/17047) > [중복 제거하기](https://school.programmers.co.kr/learn/courses/30/lessons/59408)
++ [코딩테스트 연습](https://school.programmers.co.kr/learn/challenges) > [String, Date](https://school.programmers.co.kr/learn/courses/30/parts/17047) > [이름에 el이 들어가는 동물 찾기](https://school.programmers.co.kr/learn/courses/30/lessons/59047)
 
 <br>
 
