title Update 2023-03-30-148338wCk2.md

--- a/_posts/java/2023-03-30-148338wCk2.md
+++ b/_posts/java/2023-03-30-148338wCk2.md
@@ -1,5 +1,5 @@
 ---
-title: [배열과 리스트 실전 문제] 숫자의 합 구하기 (백준 11720)
+title: 숫자의 합 구하기 (백준 11720) [배열과 리스트 실전 문제] 
 date: 2023-03-30 23:11:00 +0900
 categories: [Java]
 tags: [인프런,java,알고리즘,코딩테스트,백준]     # TAG names should always be lowercase
